--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "@apollo/client": "^3.8.9",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.2",
-    "apollo-upload-client": "^18.0.1",
+    "apollo-upload-client": "^17.0.0",
     "date-fns": "^4.1.0",
     "esbuild": "^0.19.11",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
